arrumando os arquivos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	</style>
 </head>
 <body>
-	<script type="module">
-		import chamMain from './cod.js'
+	<script src="cod.js">
 	</script>
 </body>
