--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	</style>
 </head>
 <body>
+	<h3 id="instrucao">Clique 'enter' para começar e use WASD para se mover</h3>
+	<div id="div-canvas">
+	</div>
 	<script src="cod.js">
 	</script>
 </body>
